# ChangeLog for dev-perl/XML-RSS
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RSS/ChangeLog,v 1.86 2011/01/14 15:38:24 tove Exp $

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -XML-RSS-1.44.ebuild,
  -XML-RSS-1.47.ebuild:
  Cleanup

  03 Dec 2010; Michael Weber <xmw@gentoo.org> XML-RSS-1.47.ebuild,
  XML-RSS-1.48.ebuild:
  add ~arm (bug 302981)

  05 Nov 2010; Samuli Suominen <ssuominen@gentoo.org> XML-RSS-1.48.ebuild:
  ppc64 stable wrt #341865

  27 Jun 2010; <nixnut@gentoo.org> XML-RSS-1.48.ebuild:
  ppc stable #323529

  21 Jun 2010; Raúl Porcel <armin76@gentoo.org> XML-RSS-1.48.ebuild:
  alpha/ia64/sparc stable wrt #323529

  15 Jun 2010; Torsten Veller <tove@gentoo.org> XML-RSS-1.48.ebuild:
  Stable on amd64 and x86 (#323529)

*XML-RSS-1.48 (23 Apr 2010)

  23 Apr 2010; Robin H. Johnson <robbat2@gentoo.org> +XML-RSS-1.48.ebuild:
  Version bump via perl-bump experimental tool.

  24 Dec 2009; Torsten Veller <tove@gentoo.org> -XML-RSS-1.46.ebuild:
  Cleanup

  23 Dec 2009; Fabian Groffen <grobian@gentoo.org> XML-RSS-1.47.ebuild:
  Marked ~x86-solaris, bug #296509

*XML-RSS-1.47 (10 Dec 2009)

  10 Dec 2009; Torsten Veller <tove@gentoo.org> +XML-RSS-1.47.ebuild:
  Version bump

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -XML-RSS-1.45.ebuild:
  Cleanup

*XML-RSS-1.46 (08 Oct 2009)

  08 Oct 2009; Torsten Veller <tove@gentoo.org> +XML-RSS-1.46.ebuild:
  Version bump

*XML-RSS-1.45 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org> +XML-RSS-1.45.ebuild:
  Version bump via perl-bump experimental tool.

  06 May 2009; Torsten Veller <tove@gentoo.org> -XML-RSS-1.31.ebuild,
  -XML-RSS-1.43.ebuild:
  Cleanup

  04 May 2009; Raúl Porcel <armin76@gentoo.org> XML-RSS-1.44.ebuild:
  alpha/ia64/sparc stable wrt #268263

  03 May 2009; Markus Meier <maekke@gentoo.org> XML-RSS-1.44.ebuild:
  x86 stable, bug #268263
