@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Devel-Declare-0.006001.tar.gz 51634 RMD160 e2a4ed63889e30b03ee99631e4b0a5eb18b10226 SHA1 28efc9cdc10f8334d52028c28feed86b26c068ec SHA256 7a4f8a847eca354476f518df6c8f9d2792cf106350137d2c7132fa2d9504cb7e
+DIST Devel-Declare-0.006002.tar.gz 48102 RMD160 ed11d2c25b87e09c57ee438584dbf7870d8d2ae2 SHA1 0c637e6fb8e595f36c68863a85cb19a037fde58c SHA256 787cb98b7f4609df501a4c4f89d4c818abc4ca8dbe2365a57d309a5a24e788ab
 EBUILD Devel-Declare-0.6.1.ebuild 630 RMD160 b2fc632371b8d4aaba912935b70bba95e0ae5a60 SHA1 a647f5b22a8bb0da075f1c96b1122f96967147be SHA256 d3ecef34b67e191f30e137196c489ca1b1351a1e3b46f658660a206617e23c3a
-MISC ChangeLog 1504 RMD160 850e495bf4c78b5201a48c95cff3cb6fec0d9557 SHA1 536de6cc34190cb9d08b99de2a82e456e0588032 SHA256 3e409b628267f26379d15790d709a58ed607379b7f94bb285eb331e66de1a19b
+EBUILD Devel-Declare-0.6.2.ebuild 630 RMD160 3c3a70625740092ca6c90681d77184eed5caff27 SHA1 273001009e4900969954c2bda9ccc8dc0f82971a SHA256 c58920de1c9ed53290a6c432b3bff62dc61e0751241be01b5adb73ea49c2029c
+MISC ChangeLog 1633 RMD160 cbb5fc8b027aae4a8436215809b8bdeac4cbb637 SHA1 ae5b400debc9c5e274a5e3406fb397c535a39727 SHA256 4e041356adf75c79a37df61617aaa6f0a29a077ee3b992deb997aa1033afc427
 MISC metadata.xml 308 RMD160 d05948bdc3de5501920c9abd188e45413e91ed9f SHA1 bf2ec44bee5144c4f9f8a8ce47580a202e11253d SHA256 60b1ce10380e9d2cd96b9bc375c0edadaf90dd4cb154ff4e0d5e86867f9817e3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk2YFbUACgkQV3J2n04EauyVsQCfdD7ByNd9CjLrWgVP2zFf82PB
-6q8Ani6Qjz9PmrlZX1lS/7hOWRgpBZX2
-=s0HP
+iEYEAREIAAYFAk2e1NMACgkQV3J2n04EauxpCwCgxqzZH/BNXLSZWiJF4eDzCsMj
+gl0An0ku3AD0xo3Dxe32u0ORoQ9Bz7N9
+=zuH7
 -----END PGP SIGNATURE-----
