@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Module-Starter-1.54.tar.gz 40968 RMD160 dce3da75ad5863639242a9fb1a33dfdf66730e37 SHA1 f88c0b2f619e8a9ca02caca243ee40eb67b6e953 SHA256 5c3e7beefee8f933e82ddc38b258fcb494690316b1337b68de4f578527b1a82e
+DIST Module-Starter-1.56.tar.gz 44421 RMD160 1e07248405a0ad40d8ab049f2e43d4a6dca9f0a1 SHA1 a18319c428a276f6fa231e2094995d5a88b6f970 SHA256 00ed7f7d46f3f95f033ce4895cfbf58c455b8c33207ceadd0551da0fafe5d630
 EBUILD Module-Starter-1.54.ebuild 580 RMD160 8d8a6df9a4555b98a07e50a0da24d913073569c0 SHA1 f680f5efd3404169b7b5ec29802eb9bbd99a9b0e SHA256 246beb76ab1bf2d3e18a62fc6e3b114f7eb1a3b8718d1e117cadbea702a97d18
-MISC ChangeLog 752 RMD160 e73f1c701b05541d0a71e1be22245735d0830500 SHA1 bcde28d7a7ca0215f185e6f3d55e7af5f3fc95fe SHA256 19cbb5737372951bc496936aa758423b9a371cf3f2d73ef7ca62d67cdf981eb3
+EBUILD Module-Starter-1.560.0.ebuild 603 RMD160 fa4a569995a2a30dd8fd113a9aa94f8e8ceaee82 SHA1 5b3edebdd238604166d3fed4d1aba9cd923905f3 SHA256 72f48ec4599161a1df044dcc51832a992ad9ca9304c24f071d6d16ac3aa38edc
+MISC ChangeLog 887 RMD160 6759ea4080456a97c3b365e92e03a62ad08902a7 SHA1 5afe46ff2e08c95aaa65cb7a7478aa066316ec67 SHA256 c391afe9b73d207344a764d7d09f45c0559001cf4e97ee6c6a4747c6ac69f98e
 MISC metadata.xml 240 RMD160 61b2d936b2e981ab57340f5bb4f3ddc419498a3c SHA1 70949e90f7f4ae15dca1e2332b4e85fd9f6fad0b SHA256 5acc49567618ae916c60ad48610d63a24f43dd7969b85927793899310b9b0896
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAkyPf1YACgkQV3J2n04EauxUvACcC9ydwlDH0c6PcfDfgAQE2cHH
-bmsAoKP99YY036RyICJtqRABlRxUa3Nj
-=/l1O
+iEYEAREIAAYFAk2e1FMACgkQV3J2n04EauzTygCgkT/ONupxg04C71/LskbUe9Gk
+VzgAoIe3Kv5PMnElLEyoyrC9qjrOiBfx
+=FQ92
 -----END PGP SIGNATURE-----
