@@ -1,14 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST XML-RSS-1.48.tar.gz 126155 RMD160 8a19dce7a5b1161799ce6b968d334e386e52113f SHA1 8b26c8b555fddb6c303020d0cdefc9b0fef796b9 SHA256 c9640129f986ad0457f72c4134d80daf3334ea1d318b28d996334bdbd9e8cf9f
+DIST XML-RSS-1.49.tar.gz 127216 RMD160 b2d6effd28ccff553ed9175848affe9676134277 SHA1 ec0a04e8d37a2f77ff56c2ab380f443807d37830 SHA256 13d5c3277f62143a8f0a04236e4bc850c85d515588e7f6d171b883edd3e07473
 EBUILD XML-RSS-1.48.ebuild 784 RMD160 3c7d70cb89f3f8b18a0941da0372e43d17028b32 SHA1 2e76d462f56e47f661208056b8d411b5f866f4fd SHA256 60312277ef5db25a4856b62dbe27a6819efe1f25b37758069593a02a697d4653
-MISC ChangeLog 9654 RMD160 223f324897264de7f6e781eab62e0fb9f70c4784 SHA1 7de03c0e6cbd3961ebb1cad4122b69b4c5e8a8f5 SHA256 513f50463150042b6b5a2dfb8824bd61897f9f28bb0423d373038d6e110d35e3
+EBUILD XML-RSS-1.490.0.ebuild 815 RMD160 d6ce2e09e10a7847f9abd0c81c14787fa9b2facd SHA1 220ac95432ba1213df9a3394133434a4f70371c0 SHA256 ea913b306122fad276af7e2765a735bfe593bc894288bd52b110d93392b2986a
+MISC ChangeLog 9775 RMD160 fc10f3f00d08979fadbe5cf19e1bf7f7d54b357f SHA1 424826f521e7d4ea08b590ed6e0433ab41b5a3f0 SHA256 95b6af9fea2e8b3295089a756fe8307215f34ae1c6436171a586701579911fc3
 MISC metadata.xml 351 RMD160 b1101f497bedb864c7d0a17395e2089d16eedb44 SHA1 df9ff38b1d3612333bc89616503173c5bac604ba SHA256 070eb034b314d76992d60645e17025893feb3b4ac5dc8b878aa440ca75e67b3e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk0wbfUACgkQV3J2n04EauyBEACgyaIHZJ849ETaLrjc3aGAMfC6
-/iIAoKwEP4XX+/AOkAoaATIlSvVtxy9C
-=I1Vz
+iEYEAREIAAYFAk2e0+QACgkQV3J2n04EauyAkwCeIaQsrV2GVaiIBU1AqnVGe8CZ
+xYgAoLS2Qqy/EwyXEwukEK9PVzQXG2hv
+=SKks
 -----END PGP SIGNATURE-----
