@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-RSS
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RSS/ChangeLog,v 1.86 2011/01/14 15:38:24 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-RSS/ChangeLog,v 1.87 2011/04/08 09:22:39 tove Exp $
+
+*XML-RSS-1.490.0 (08 Apr 2011)
+
+  08 Apr 2011; Torsten Veller <tove@gentoo.org> +XML-RSS-1.490.0.ebuild:
+  Version bump
 
   14 Jan 2011; Torsten Veller <tove@gentoo.org> -XML-RSS-1.44.ebuild,
   -XML-RSS-1.47.ebuild:
